--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					         </article>
                              <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-2">
+					               <div class="timeline-icon color-3">
 					               </div>
 					               <div class="timeline-label">
 					                  <h2>AR</h2>
@@ -468,8 +468,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                                     <div class="col-md-4">													
                                                         <video width="360" height="270" controls>
                                                             <source src="video/ar.mp4" type="video/mp4">
-                                                            
-                                                            Your browser does not support the video tag.
                                                         </video>
                                                     </div>
                                                 </div>
@@ -481,7 +479,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
                              <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-2">
+					               <div class="timeline-icon color-4">
 					               </div>
 					               <div class="timeline-label">
 					                  <h2>FACE SWAPING</h2>
@@ -489,15 +487,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				                  	    <span>
 											<div class="container">
                                                 <div class="row-md-1">
+                                                    <img width="100%" src="video/swap.jpg" alt="Italian Trulli">
+                                                </div>
+                                                <div class="row-md-1">
                                                     <!-- <div class="col-md-3">
                                                         We implemented the paper: Rectangling Panoramic Images via Warping, SIGGRAPH 2013, as our final project of course 16720B. You can find the code below.<br>
                                                         [<a href="https://github.com/Jamie725/Rectangling-Panoramic-Images-Via-Warping"  target="_blank">Code</a>]
                                                         [<a href="docs/cv_final.pptx"  target="_blank">Slides</a>]
                                                         <br>
                                                     </div> -->
-                                                    <div class="col-md-6">
-															<img width="100%" src="video/swap.jpg" alt="Italian Trulli">
-									  				</div>
                                                     <div class="col-md-4">													
                                                         <video width="360" height="270" controls>
                                                             <source src="video/swap.mp4" type="video/mp4">
@@ -511,7 +509,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					         </article>
                              <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-2">
+					               <div class="timeline-icon color-5">
 					               </div>
 					               <div class="timeline-label">
 					                  <h2>FACE SWAPING</h2>
