--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						   					</h2>
 											<h2>My research interests lie in Computer Vision and Deep Learning, focusing on 3D vision, multimodal models mainly. </h2>
 												<a >
-												<p><a class="btn btn-primary btn-learn" href="docs/CV_Yi_Ting_Chen.pdf">Download CV <i class="icon-download4"></i></a></p>
+												<!-- <p><a class="btn btn-primary btn-learn" href="docs/CV_Yi_Ting_Chen.pdf">Download CV <i class="icon-download4"></i></a></p> -->
 											</div>
 					   				</div>
 					   			</div>
@@ -399,12 +399,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				                  	    <span>
 											<div class="container">
 											  <div class="row-md-1">
-												<div class="col-md-2">													
+												<div class="col-md-2.5">													
 													<video width="200" height="200" controls>
   														<source src="video/obama.mp4" type="video/mp4">
 													</video>
 											    </div>
-												<div class="col-md-2">			
+												<div class="col-md-2.5">			
 													<video width="200" height="200" controls>
 														<source src="video/lip.mp4" type="video/mp4">
 													</video>
@@ -487,7 +487,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				                  	    <span>
 											<div class="container">
                                                 <div class="row-md-1">
-                                                    <img width="100%" src="video/swap.jpg" alt="Italian Trulli">
+                                                    <img width="50%" src="video/swap.jpg" alt="Italian Trulli">
                                                 </div>
                                                 <div class="row-md-1">
                                                     <!-- <div class="col-md-3">
