--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-3">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>AR</h2>
+					                  <h2>LOCKDOWN</h2>
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
@@ -465,6 +465,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                                         [<a href="docs/cv_final.pptx"  target="_blank">Slides</a>]
                                                         <br>
                                                     </div> -->
+                                                    <a href="https://apps.apple.com/cn/app/%E9%9A%8F%E5%89%AA/id1498868518" target="_blank" >随剪</a>                                                 
                                                     <div class="col-md-4">													
                                                         <video width="360" height="270" controls>
                                                             <source src="video/ar.mp4" type="video/mp4">
@@ -512,7 +513,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-5">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>FACE SWAPING</h2>
+					                  <h2>HANDAR</h2>
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
@@ -542,8 +543,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<body>
 
 					<div class="content">
-						<a href="https://clustrmaps.com/site/1bqgr"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4&cl=ffffff" /></a>
-					  
+						<!-- <a href="https://clustrmaps.com/site/1bqgr"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4&cl=ffffff" /></a> -->
+                        <a href="https://clustrmaps.com/site/1c1t2"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=RD_yNUqCXEWzppZjIohAi_om3Y0gj1FQocpTS-rHRMQ&cl=ffffff" /></a>
 					</div>
 
 				</body>
