--- a/index.html
+++ b/index.html
@@ -465,7 +465,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                                         [<a href="docs/cv_final.pptx"  target="_blank">Slides</a>]
                                                         <br>
                                                     </div> -->
-                                                    <a href="https://apps.apple.com/cn/app/%E9%9A%8F%E5%89%AA/id1498868518" target="_blank" >随剪</a>                                                 
+                                                    <div class="col-md-1">
+                                                        <!-- We implemented the paper: Rectangling Panoramic Images via Warping, SIGGRAPH 2013, as our final project of course 16720B. You can find the code below.<br> -->
+                                                        <!-- [<a href="https://github.com/Jamie725/Rectangling-Panoramic-Images-Via-Warping"  target="_blank">Code</a>] -->
+                                                        <!-- [<a href="docs/cv_final.pptx"  target="_blank">Slides</a>] -->
+                                                        <a href="https://apps.apple.com/cn/app/%E9%9A%8F%E5%89%AA/id1498868518" target="_blank" >APP:随剪</a>   
+                                                        <br>
+                                                    </div>
+                                                    <a href="https://apps.apple.com/cn/app/%E9%9A%8F%E5%89%AA/id1498868518" target="_blank" >APP:随剪</a>                                                 
                                                     <div class="col-md-4">													
                                                         <video width="360" height="270" controls>
                                                             <source src="video/ar.mp4" type="video/mp4">
