--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! I'm Lv Zhen</h1>
-						   					<h2>I'm currently a algorithm expert in Computer Science at Alibaba. 
+						   					<h2>I'm currently a senior algorithm expert in Computer Science at Alibaba. 
 						   					</h2>
 											<h2>My research interests lie in Computer Vision and Deep Learning, focusing on 3D vision, multimodal models mainly. </h2>
 												<a >
