--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  	Ph.D. in Wuhan University<br>
 					                  	<span>
 					                  		2011 - 2018<br>
-					                  		Photogrammetry in Remote Sensing. <br>
+					                  		Photogrammetry and Remote Sensing <br>
 					                  	</span>
 					                  </h2>
 					                  
