--- a/index.html
+++ b/index.html
@@ -196,6 +196,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+							<article class="timeline-entry begin">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-5">
+					               </div>
+					               <div class="timeline-label">
+					                  <h2>Lv, Z., Long, Y., Huang, C., Li, C., Lv, C., Ren, H., & Zheng, D. (2024). SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input</h2>
+											<div class="container">
+											  <div class="row">
+					                  			<div class="col-md-5">
+            										<div class="paper-conf">arXiv, 2024</div>
+					                  				<p>[<a href="https://arxiv.org/abs/2411.11934" target="_blank">Paper</a>] </p>
+					                  			</div>
+									  		</div>
+									  	</div>									  	
+					               </div>
+					            </div>
+					         </article>
 					         <article class="timeline-entry begin">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-5">
@@ -578,4 +595,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="js/main.js"></script>
 	</body>
 </html>
-
