--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-5">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Lv, Z., Long, Y., Huang, C., Li, C., Lv, C., Ren, H., & Zheng, D. (2024). SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input</h2>
+					                  <h2>SpatialDreamer: Self-supervised Stereo Video Synthesis from Monocular Input</h2>
 											<div class="container">
 											  <div class="row">
 					                  			<div class="col-md-5">
