--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											<div class="container">
                                                 	<div class="row-md-1">
                                                     	<div class="col-md-4">													
-                                                        <video width="360" height="270" controls>
+                                                        <video width="480" height="150" controls>
                                                             <source src="video/lldq_4k_sub1.mp4" type="video/mp4">   
                                                             Your browser does not support the video tag.
                                                         </video>
@@ -434,7 +434,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-1">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>LIPSYNC</h2>
+					                  <h2>Realtime LIPSYNC</h2>
 					                  <!-- <h4>Object Detection in Infrared Images </h4> -->
 				                  	    <span>
 											<div class="container">
@@ -465,7 +465,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-2">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>AIGC</h2>
+					                  <h2>AIGC-Based Song and Dance Animation Generation</h2>
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
@@ -494,7 +494,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-3">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>LOCKDOWN</h2>
+					                  <h2>Reimplementation of AE LOCKDOWN</h2>
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">          
@@ -559,7 +559,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-5">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>HANDAR</h2>
+					                  <h2>AR 3D Hand Interaction in Real-Time on Mobile</h2>
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
