--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											<div class="container">
 											  <div class="row">
 					                  			<div class="col-md-5">
-            										<div class="paper-conf">arXiv, 2024</div>
+            										<div class="paper-conf">CVPR </b>, 2025</div>
 					                  				<p>[<a href="https://arxiv.org/abs/2411.11934" target="_blank">Paper</a>] </p>
 					                  			</div>
 									  		</div>
