--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 															<li>Drove and launched the project that realized 3D hand tracking in the wild, as well as virtual scene interaction by Unreal engine on mobile.</li>
 															<li>Realized the AI music creation application including lyric generation, singing voice synthesis and singing voice conversion.</li>
 															<li>Realized the application of dance motion creation by diffusion model.</li>
-															<li>Dominated 3D photo/video project similar to Apple 15 pro's 3D special video.</li>
+															<li>Dominated 3D photo/video project similar to Apple 15 pro's 3D spatial video.</li>
 														</ul>									
 										      		</div>									      	
 										      	</div>							      	
